[package]
name = "rust-hole-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
hickory-server = "0.24"
hickory-proto = "0.24"
hickory-resolver = "0.24"
rust-hole-db = { path = "../rust-hole-db" }
rust-hole-api = { path = "../rust-hole-api" }
warp = { version = "0.4.2", features = ["server"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
dashmap = "6.1.0"
