[package]
name = "rust-hole-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-macros = "2.0.0-rc"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }